删除后端逻辑
feat: Add DiseaseViewResponse and related classes for disease data handling

- Implemented DiseaseViewResponse class with fields for disease name, phases, target rows, total drugs, and updated timestamp.
- Created DrugVO and TargetRowVO inner classes to encapsulate drug and target data respectively.
- Added ProgressMapper.xml for MyBatis mappings to retrieve disease-related data from the database.
- Introduced dev.sh script for backend hot-reload development using Spring Boot DevTools.
- Updated pom.xml to include necessary dependencies and configurations for the project.
- Added Maven properties for versioning and dependency management.

feat: enhance disease and target selection components

- Refactored the request utility to include a redirect to the login page on 401/403 errors.
- Improved the DiseaseSelect component to support searching and displaying selected diseases.
- Added functionality to group and filter targets in the TargetSelect component.
- Implemented auto-selection of targets based on the selected disease in the TargetProgress component.
- Enhanced tooltip functionality for drug information display in the TargetProgress component.
- Cleaned up unused state variables and improved overall code readability.

chore: exclude Java build artifacts from version control

Add target/, *.class, *.jar to .gitignore and remove all compiled files from git tracking.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

ci: add Docker build and GitHub Actions deployment pipeline

- Add backend Dockerfile (multi-stage Maven + JRE build)
- Fix frontend Dockerfile to use pnpm instead of npm
- Add application-prod.yml reading config from environment variables
- Add docker-compose.yml for server deployment
- Add GitHub Actions workflow to build images and deploy via SSH

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

ci: trigger initial deployment

fix: remove invalid ignoreDeprecations value for TypeScript 5.x

fix: correct GHCR login username